--- a/FrontendBlissMind/src/styles/styles.css
+++ b/FrontendBlissMind/src/styles/styles.css
@@ -52,16 +52,19 @@ textarea:focus-within {
     box-shadow: #2e186a 0px 0px 0px 1px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1.title{
     font-family: 'Motiva Sans Bold', serif;
     color: #18216d;
     font-size: 56px;
     line-height: 1.18;
+    font-weight: 600;
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Motiva Sans Bold', serif;
+}
+p{
+    font-family: 'Motiva Sans Light', sans-serif;
 }
 
 @media only screen and (max-width: 890px) {
@@ -74,16 +77,6 @@ h6 {
     h1, h2, h3, h4, h5, h6 {
         font-size: 32px;
     }
-}
-
-p {
-    color: #18216d;
-    font-size: 21px;
-    line-height: 1.41;
-}
-
-h1 {
-    font-weight: 600;
 }
 
 *:focus {
