--- a/FrontendBlissMind/src/pages/chat-ai/chatAi.module.css
+++ b/FrontendBlissMind/src/pages/chat-ai/chatAi.module.css
@@ -7,9 +7,9 @@
   border-radius: 8px;
   background: radial-gradient(
     circle at center,
-    #F8FBFF 0%,
-    #EEF7FF 50%,
-    #E4EFFA 100%
+    #f8fbff 0%,
+    #eef7ff 50%,
+    #e4effa 100%
   );
   height: 88vh;
 }
@@ -38,7 +38,7 @@
   height: 16rem;
   overflow-y: auto;
   margin-bottom: 1rem;
-  padding: 1rem 5.5rem;
+  padding: 1rem 15.5rem;
   flex-grow: 1;
 }
 
@@ -86,7 +86,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 15.5rem 0rem;
   background-color: #fff;
   border-top: 1px solid #ddd;
 }
@@ -115,4 +115,22 @@
 
 .button:hover {
   background-color: #005fa3;
+}
+
+@media (max-width: 768px) {
+  .chatHistory {
+    padding: 1rem 1rem;
+  }
+
+  .button {
+    display: none;
+  }
+
+  .input {
+    width: 100%;
+  }
+
+  .inputContainer {
+    padding: 0.5rem 0.5rem 0rem;
+  }
 }
